A lot of fix and add new game after game ended
