# server/src/main/scala/io/swagger/server/model/Carte.scala
@@ -5,10 +5,12 @@ package io.swagger.server.model
  * @param taille 
  * @param monstres 
  * @param joueurs 
+ * @param joueurs_morts 
  */
 case class Carte (
   taille: Int,
   monstres: Int,
-  joueurs: Int
+  joueurs: Int,
+  joueurs_morts: Int
 )
 
